--- a/helpdesk/templates/helpdesk/base.html
+++ b/helpdesk/templates/helpdesk/base.html
@@ -26,6 +26,7 @@
 
     <!-- MetisMenu CSS -->
     <link href="{% static 'helpdesk/vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <!-- Morris Charts CSS -->
     {% if helpdesk_settings.HELPDESK_USE_CDN %}
