--- a/helpdesk/static/helpdesk/helpdesk-extend.css
+++ b/helpdesk/static/helpdesk/helpdesk-extend.css
@@ -76,3 +76,34 @@ Add your custom styles here
 }
 #helpdesk-body {padding-top: 100px;}
 img.brand {padding-right: 30px;}
+
+
+/* H3A helpdesk*/
+
+.top_helpdesk {
+    margin-left: 0px;
+}
+
+.top_contact {
+    margin-left: -1px;
+}
+
+ul.social-icons {
+    list-style: none;
+    padding: 0;
+    margin: -5px;
+    display: inline-block;
+}
+
+.social-icons li {
+    display: inline-block;
+}
+
+#sp-top1 {
+    margin: 5px 0px 0px -168px;
+}
+
+#sp-top-bar #sp-top3 {
+    width: 149px;
+    margin: 0px 0px 0px -99px;
+}
