--- a/helpdesk/templates/helpdesk/public_base.html
+++ b/helpdesk/templates/helpdesk/public_base.html
@@ -25,9 +25,13 @@
     <!-- MetisMenu CSS -->
     <link href="{% static 'helpdesk/vendor/metisMenu/metisMenu.min.css' %}" rel="stylesheet">
 
+    <!-- H3ABioNet website CSS-->
+    <link href="https://h3abionet.org/templates/flex/css/custom.css" rel="stylesheet" type="text/css">
+
     <!-- Custom CSS -->
     <link href="{% static 'helpdesk/dist/css/sb-admin-2.css' %}" rel="stylesheet">
     <link rel='stylesheet' href='{% static "helpdesk/helpdesk-extend.css" %}' type='text/css'  media="screen" >
+
 
     <!-- Custom Fonts -->
     <link href="{% static 'helpdesk/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
