--- a/helpdesk/templates/helpdesk/navigation.html
+++ b/helpdesk/templates/helpdesk/navigation.html
@@ -51,18 +51,21 @@
 {#                <a class="navbar-brand" href="{% url 'helpdesk:home' %}">H3ABioNet {% trans 'Helpdesk' %}</a>#}
             </div>
 
-
+            {% load static %}
             <div class="row" style="position: relative;">
                 <div id="sp-logo" class="col-xs-9 col-sm-10 col-md-3">
                     <div class="sp-column ">
-                        <img class=" sp-default-logo hidden-xs" src="https://www.h3abionet.org/images/logos/LOGO-HEADER.png" alt="H3ABioNet">
-{#                        <img class=" sp-retina-logo hidden-xs" src="https://www.h3abionet.org/images/logos/LOGO-HEADER.png" alt="H3ABioNet" width="625" height="158">#}
-{#                        <img class="sp-default-logo visible-xs-block" src="https://www.h3abionet.org/images/logos/Asset-1H3Abionet_logo_stack.png" alt="H3ABioNet"></a>#}
+                        <img class="sp-default-logo hidden-xs" src="{% static "helpdesk/images/logos/LOGO-HEADER.png" %}" alt="H3ABioNet">
+                        <!-- <img class=" sp-default-logo hidden-xs" src="https://www.h3abionet.org/images/logos/LOGO-HEADER.png" alt="H3ABioNet"> -->
+<!-- {#                        <img class=" sp-retina-logo hidden-xs" src="https://www.h3abionet.org/images/logos/LOGO-HEADER.png" alt="H3ABioNet" width="625" height="158">#} -->
+<!-- {#                        <img class="sp-default-logo visible-xs-block" src="https://www.h3abionet.org/images/logos/Asset-1H3Abionet_logo_stack.png" alt="H3ABioNet"></a>#} -->
                         <div>
-                            <img class="h3a-slogan" src="https://www.h3abionet.org/images/logos/h3a-slogan.png" alt="H3ABioNet">
+                            <img class="h3a-slogan" src="{% static "helpdesk/images/logos/h3a-slogan.png" %}" alt="H3ABioNet">
+                            <!-- <img class="h3a-slogan" src="https://www.h3abionet.org/images/logos/h3a-slogan.png" alt="H3ABioNet"> -->
                         </div>
                     </div>
                 </div>
+
 {#                <div id="sp-menu" class="col-xs-1 col-sm-1 col-md-8" style="position: static;">#}
 {#                    <div class="sp-column ">#}
 {#                        <div class="sp-megamenu-wrapper">#}
