point contacts link to h3abionet

--- a/helpdesk/templates/helpdesk/navigation.html
+++ b/helpdesk/templates/helpdesk/navigation.html
@@ -29,7 +29,7 @@
                                                         rel="noopener noreferrer">
                                                     <button class="top_helpdesk">Helpdesk</button>
                                                 </a></div>
-                                                <div><a href="/communications/contact">
+                                                <div><a href="https://www.h3abionet.org/communications/contact">
                                                     <button class="top_contact">Contact Us</button>
                                                 </a></div>
                                             </div>
